--- a/foodgram/requirements.txt
+++ b/foodgram/requirements.txt
@@ -2,8 +2,10 @@ arabic-reshaper==2.1.3
 asgiref==3.3.4
 Django==3.2.3
 future==0.18.2
+gunicorn==20.1.0
 html5lib==1.1
 Pillow==8.2.0
+psycopg2-binary==2.8.6
 PyPDF2==1.26.0
 python-bidi==0.4.2
 pytz==2021.1
