--- a/foodgram/Dockerfile
+++ b/foodgram/Dockerfile
@@ -18,4 +18,4 @@ RUN pip install -r requirements.txt
 RUN python manage.py collectstatic --no-input
 
 # при старте контейнера выполнить runserver
-CMD python manage.py migrate && --bind 0.0.0.0:8000 foodgram.wsgi
+CMD gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
