--- a/foodgram/requirements.txt
+++ b/foodgram/requirements.txt
@@ -8,9 +8,11 @@ Pillow==8.2.0
 psycopg2-binary==2.8.6
 PyPDF2==1.26.0
 python-bidi==0.4.2
+python-dotenv==0.17.1
 pytz==2021.1
 reportlab==3.5.67
 six==1.16.0
 sorl-thumbnail==12.7.0
 sqlparse==0.4.1
+tenv==0.1.0
 webencodings==0.5.1
