--- a/foodgram/docker-compose.yaml
+++ b/foodgram/docker-compose.yaml
@@ -4,7 +4,8 @@ version: '3.8'
 # имя директории для хранения данных
 volumes:
   postgres_data:
-  staticfiles:
+  static_volume:
+  media_volume:
 
 # имена и описания контейнеров, которые должны быть развёрнуты
 services:
@@ -21,7 +22,8 @@ services:
   app:
     build: .
     volumes:
-      - staticfiles:/code/static
+      - static_volume:/code/static/
+      - media_volume:/code/media/
     # "зависит от",
     depends_on:
       - db
@@ -31,7 +33,8 @@ services:
   nginx:
     image: nginx:1.19.10
     volumes:
-      - staticfiles:/static
+      - static_volume:/var/html/static/
+      - media_volume:/var/html/media/
       - ./host.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 80:80
