--- a/foodgram/host.conf
+++ b/foodgram/host.conf
@@ -3,7 +3,11 @@ server {
   server_name 0.0.0.0;
 
   location /static/ {
-    alias /static/;
+    root /var/html/;
+  }
+
+  location /media/ {
+    root /var/html/;
   }
 
   location / {
