--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 * linguist-vendored
-static/* linguist-vendored
-foodgram/static/* linguist-vendored
-foodgram/recipes/static/* linguist-vendored
+.py linguist-vendored=False
+
+
